# fusion-kinect2

./: .directory  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
include/config/: config.h
include/core/: DeviceManager.hpp  SensorBase.hpp
include/debug/: status.h
include/device/: KinectDevice.hpp  device.h  device_manager.h
include/gui/: DisplayManager.hpp  gui_manager.h
include/logger/: console_logger.h  logger.h
include/logging/: FileLogger.hpp
include/utils/: MathUtils.hpp
lib/: libfreenect2.so.0.2.0
lib/OpenNI2/Drivers/: libfreenect2-openni2.so.0
lib/cmake/freenect2/: freenect2Config.cmake
lib/pkgconfig/: freenect2.pc
src/: FrameProcessor.hpp  main.cpp
src/config/: config.hpp
src/core/: DeviceManager.cpp
src/debug/: status.hpp
src/device/: KinectDevice.cpp  device.cpp  device_manager.cpp  device_manager.hpp
src/gui/: DisplayManager.cpp  gui_manager.cpp
src/image-process/: FrameProcessor.cpp
src/image-processing/: FrameProcessor.cpp
src/log/: FileLogger.cpp
src/logger/: console_logger.cpp  console_logger.hpp  logger.hpp
src/logging/: FileLogger.cpp
test/device/: device_manager_test.cpp
tests/: main_test.cpp
tests/device/: device_manager_test.cpp
